# ts-scengen

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml
notebooks/: comparison.ipynb
rlp_slp_data/: RLP0N2014.xls  RLP0N2015.xls  RLP0N2017.xls
rlp_slp_data/data/: RLP0N2016.xls
scengen/: data.py  energy_score.py  evaluation.py  preprocessing.py  rlp.py
scengen/cluster/: elbow.py  metrics.py
scengen/models/: basesamplers.py  generators.py  samplers.py
